--- a/KrysiaBartek2024/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/analyses/zaczek_25_09_24.tex
@@ -61,7 +61,7 @@ po naszym 3\diams partner i tak dałby 3\nt.\\
 Obrona była bardzo ciekawa, dobrze wykorzystany 
 błąd przeciwników.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 2}
 \handdiagramv
 {\vhand{632}{A765}{Q9}{AK32}}
@@ -123,9 +123,10 @@ przesłanek obronnych z przesłankami z
 licytacji \then rozliczenie składu i siły \then 
 wprowadzenie poprawek do pierwotnego planu.  
 
-[KG] Tak, chyba \xhearts 5, a Tadziu akurat na \vul{N}.
+[KG] Tak, chyba \xhearts 5. Tadziu akurat na \vul{N}, ale faktycznie -- gość
+położył Q zamiast T xd
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 3}
 \handdiagramv
 {\vhand{Q543}{AK5}{Q9}{KJ73}}
@@ -174,7 +175,11 @@ atak na pika po naszej demarce, której
 nie zastosowaliśmy, z królem by się bała. Tym 
 bardziej przepuszczamy, wolimy, żeby to ona wzięła. 
 
-\pagebreak
+[KG] Atuty zebrał najpierw, niewskoczenie \xspades A wypuszcza,
+za to jak już nie trafił tego pika to powinien zagrać na przymus na czarnych --
+pokazałam już 12pc w rozdaniu.
+
+% \pagebreak
 \section*{Rozdanie 4}
 \handdiagramv{\vhand{K7}{QJ75}{75}{KJ542}}
 {\vhand{T93}{T2}{AKJ42}{AQ9}}
@@ -209,7 +214,7 @@ ale odruchowo dawałam ilościówki do wszystkiego z powodu deficytu punktów.
 a po marce nie xD i poza tym nigdy nie szkodzi 
 zagranie w karo. 
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 5}
 \handdiagramv
 {\vhand{AK9832}{KQ96}{5}{JT}}
@@ -232,7 +237,7 @@ na trefle 2-3 i K\clubs u \vul{S}, mimo otwarcia na \vul{N}. Swoje.
 
 [KK] Nawet blisko 3\spades nie jest. Rzyyyyyg.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 6}
 \handdiagramv{\vhand{KQT}{Q872}{KT}{A985}}
 {\vhand{J8}{AK654}{97643}{T}}
@@ -263,7 +268,7 @@ w ręce i xx\diams x\hearts w stole, nie wiem czy \nvul{N} ma xxx\clubs czy x\di
 
 [KK] Modelowe 3\diams zamiast 2\spades. Teraz sprzedałeś siłę, a nie układ. 
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 7}
 \handdiagramv{\vhand{KT9652}{T5}{986}{AK}}
 {\vhand{QJ74}{}{KJT5}{QJ754}}
@@ -290,7 +295,7 @@ W rozgrywce chyba nic się nie dzieje. Wist J\diams.\\
 Na maxy 2\spades akceptowalne. Akurtat 4\spades niewygrywalne, 
 ale bardzo dobre, więc G.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 8}
 \handdiagramv{\vhand{A82}{AKJT5}{K83}{K9}}
 {\vhand{53}{82}{A75}{AT8643}}
@@ -324,7 +329,7 @@ Czy to dobre nie wiem ale chyba tak się gra.
 
 [KK] Dobre ustalenia, wszystko sztywniutko.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 9}
 \handdiagramv{\vhand{AJ}{KQJ872}{J4}{JT3}}
 {\vhand{9}{T943}{QT73}{A962}}
@@ -359,7 +364,7 @@ słabe. Wam się nie opłacają bloki destruktywne. \\
 EWENTUALNIE możecie ustalić 2\major blok na dobrej 5, 
 multi z 6 i zwykłe otwarcia.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 10}
 \handdiagramv{\vhand{652}{A843}{K975}{A5}}
 {\vhand{AQ8}{T652}{A863}{82}}
@@ -393,7 +398,7 @@ informacji wziął K\clubs w ręce mimo ryzyka
 przebitki i zagrał do K\diams w stole. Poza tym 
 stare wyglądają jakby miał któryś stary.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 11}
 \handdiagramv{\vhand{Q643}{T}{A5432}{865}}
 {\vhand{AJT85}{AK93}{97}{J4}}
@@ -414,7 +419,7 @@ stare wyglądają jakby miał któryś stary.
 [BS] Wist \xdiams J do Asa, odwrót \xhearts T. Rozgrywający zakręca \xspades J do Q, trefl do Asa, przebitka, claim. 
 
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 12}
 \handdiagramv{\vhand{A82}{Q72}{AKJT}{KJ5}}
 {\vhand{T7}{K83}{Q932}{9762}}
@@ -441,7 +446,7 @@ Dałem 3NT które chciałem do gry, ale niestety było Non Serious. Na szczęśc
 [KK] Otworzyłeś. Już gadaliśmy o tym z Krystynką, 
 w sile 18-20 nawet z 5\diams nie opłaca się otwarcie 1\diams. 
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 13}
 \handdiagramv{\vhand{T7654}{653}{J73}{82}}
 {\vhand{KQ}{T742}{KT8}{AJT4}}
@@ -473,7 +478,7 @@ której nie wyciągnąłbym niezależnie od tego jak
 bardzo spizgany bym był. \xdiams 5 czysta, 
 tylko my mamy dojścia do ręki, pik nic nie wnosi.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 14}
 \handdiagramv{\vhand{52}{AQ}{T9643}{JT84}}
 {\vhand{AT43}{J87643}{Q}{32}}
@@ -516,7 +521,7 @@ bo na trefla wywali po wzięciu Asem.
 Mamy za to istotną szansę promocji. 
 Też bym grał w pika po małym karze.  
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 15}
 \handdiagramv{\vhand{AJ96542}{K5}{2}{A87}}
 {\vhand{7}{AQ9642}{QJ65}{65}}
@@ -555,7 +560,7 @@ Co do 3\hearts to nie ma sensu, ponieważ goście
 już pokazali 19pc, więc jest pozycja 
 umożliwiająca słabsze wejścia. 
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 16}
 \handdiagramv{\vhand{AJ32}{T7}{QT8}{8754}}
 {\vhand{6}{K854}{AJ53}{AJT2}}
@@ -584,7 +589,7 @@ sobie mógł przejść i zrobić coś lepszgo,
 czy z singlową, czy z drugą. A co ważniejsze, 
 nie może mieć składu 5441. 
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 17}
 \handdiagramv{\vhand{A876}{3}{KQ65}{K853}}
 {\vhand{43}{K8642}{T92}{JT7}}
@@ -605,7 +610,7 @@ nie może mieć składu 5441.
 [BS] Wist T\clubs. Jakaś nuda. +2.
 
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 18}
 \handdiagramv{\vhand{96532}{A874}{A5}{95}}
 {\vhand{J7}{T3}{K8732}{AKQ8}}
@@ -639,7 +644,7 @@ nie ma sensu Q. Tu nawet nie trzeba jakiejś
 szczególnej analizy, partner markuje to ma J, 
 albo 4+ piki.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 19}
 \handdiagramv{\vhand{7}{JT654}{K874}{J73}}
 {\vhand{A863}{K7}{QT9}{KT84}}
@@ -679,7 +684,7 @@ a zwłaszcza samych siebie. Poza
 tym to nie jest pozycja na robienie w konia, 
 bo z K8x też zagrasz 8.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 20}
 \handdiagramv{\vhand{A3}{AQT95}{KT9}{Q86}}
 {\vhand{T52}{8742}{65}{AJ54}}
@@ -731,7 +736,7 @@ A co do wbicia się A, to trzeba baaaardzo
 płynnie przepuścić i powinno to być wogóle 
 automatyczne, zbyt się podjarałeś.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 21}
 \handdiagramv{\vhand{KT732}{A98}{652}{AT}}
 {\vhand{6}{KQJ74}{AQ7}{KJ95}}
@@ -763,7 +768,7 @@ ewidentnym lavinthalem, to się zgadza.
 Nie weźmiemy przebitki bo mając nawet 4=2=(4=3) 
 zgłosimy młody po kontrze.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 22}
 \handdiagramv{\vhand{873}{953}{A543}{AK7}}
 {\vhand{9}{K762}{KT862}{JT4}}
@@ -783,14 +788,13 @@ zgłosimy młody po kontrze.
 [BS] 1\nt = inwit z fitem, 4333\\
 Wist 6\diams. Brałem piki i wychodziłem w trefla. Zdziwko jak \nvul{N} pokazał \xclubs AK. Płaskie jak cep.
 
-[KK] Płaskie jak cep indeed.
-
 \begin{figure}[H]
     \centering
-    \includegraphics[height=5cm]{cep.jpg}
+    \includegraphics[height=6cm]{cep.jpg}
 \end{figure}
+[KK] Płaskie jak cep indeed.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 23}
 \handdiagramv{\vhand{T83}{KJ762}{854}{97}}
 {\vhand{AK652}{T5}{T62}{A86}}
@@ -825,7 +829,7 @@ zaswędziała dupa to 2\nt nat nie ma
 absolutnie żadnego sensu, musi być jakimś 
 wariantem z fitem zwłaszcza, że 3\clubs to przepych.  
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 24}
 \handdiagramv{\vhand{QJ}{J3}{AQ432}{JT98}}
 {\vhand{KT96}{AK75}{KJ8}{K2}}
@@ -846,7 +850,7 @@ wariantem z fitem zwłaszcza, że 3\clubs to przepych.
 [KG] Wist 6\diams, oddane A\diams i przebitka.
 
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 25}
 \handdiagramv{\vhand{AQ852}{A7}{T52}{754}}
 {\vhand{T9}{KT643}{K43}{K92}}
@@ -870,7 +874,7 @@ Nie no, gość miał 13, dyskusyjne to otwarcie.
 
 [KK] Nie otwieramy.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 26}
 \handdiagramv{\vhand{K6}{QT654}{A95}{QJ6}}
 {\vhand{AJ73}{J9872}{2}{T94}}
@@ -899,7 +903,7 @@ Zabicie bardzo sugeruje posiadanie \xdiams QT. Zresztą, \vul{N} odrzucając imp
 [KK] Ja bym zabił, może ma \xhearts AJ i jakiś squeeze 
 się ustawi. A i tak masz dojścia.
 
-\pagebreak
+% \pagebreak
 \section*{Rozdanie 27}
 \handdiagramv{\vhand{Q743}{2}{AQ9532}{AT}}
 {\vhand{62}{873}{J64}{98653}}
