--- a/KrysiaBartek2024/analyses/zaczek_30_09_24.tex
+++ b/KrysiaBartek2024/analyses/zaczek_30_09_24.tex
@@ -3,7 +3,7 @@
 
 \import{../../lib/}{bridge.sty}
 
-\title{Żaczek 25.09.24}
+\title{Żaczek 30.09.24}
 \author{Krysia \& Bartek}
 \begin{document}
 \maketitle
@@ -24,12 +24,10 @@
     \end{tabular}
 \end{table}
 
-Bartek z 8pc zdecydował się nie inwitować,
+[KG] Bartek z 8pc zdecydował się nie inwitować,
 3\nt po dość oczywistym wiście pikowym 
 (u nas \xspades 4) niestety czapowe. Po innym też
 idzie, chociaż nie tak bezproblemowo.
-
-\hfill -K
 
 \pagebreak
 \section*{Rozdanie 2}
@@ -50,7 +48,7 @@ idzie, chociaż nie tak bezproblemowo.
     \end{tabular}
 \end{table}
 
-Tu niestety zlagowałam w licytacji, chyba ze względu
+[KG] Tu niestety zlagowałam w licytacji, chyba ze względu
 na wejście przeciwnika -- pokazałam 4 kiery.
 Na szczęście po systemowym 3\diams (3 kiery) też
 kończymy w 4\hearts. Wist \xclubs K pomógł, bez niego
@@ -58,8 +56,6 @@ pewnie starałabym się impasować trefle zamiast liczyć
 na wejście 1\spades z piątego wałka. Ściągnęłam 2
 kiery i zagrałam trefla. \vul{N} wyszedł w pika, po raz kolejny
 ułatwiając mi zadanie. Oddałam \xhearts J, \xclubs Q i \xdiams K.
-
-\hfill -K
 
 \pagebreak
 \section*{Rozdanie 3}
@@ -79,12 +75,12 @@ ułatwiając mi zadanie. Oddałam \xhearts J, \xclubs Q i \xdiams K.
     \end{tabular}
 \end{table}
 
-Otwarłam z 11pc i po raz trzeci wylądowałam na rozgrywce.
+[KG] Otwarłam z 11pc i po raz trzeci wylądowałam na rozgrywce.
 Z pałą na \nvul{N} zupełnie się nie zgadzam.
 Na 1\hearts niestety musiałam dać forsujące 1\spades 
 (nie chciałam grać z punktami przed \nvul{N} 
 z naciąganym otwarciem i
-niedzielącymi się atutami i singlem w kolorze partnera)
+niedzielącymi się atutami i singlem w kolorze partnera).
 
 Na szczęście po raz kolejny wszystko stało i
 jeszcze wist wypuścił nadróbkę.
@@ -92,8 +88,6 @@ jeszcze wist wypuścił nadróbkę.
 Wist \xspades 5 wzięty w stole, karo wzięte \xdiams K,
 trefl do asa. Przebiłam karo i 2 trefle w stole, kiera w ręce,
 na koniec oddając 2 piki.
-
-\hfill -K
 
 \pagebreak
 \section*{Rozdanie 4}
@@ -112,14 +106,10 @@ na koniec oddając 2 piki.
     \end{tabular}
 \end{table}
 
-Wist \xspades A, dołożone \xspades 7 (demarka...? Może wsm
+[KG] Wist \xspades A, dołożone \xspades 7 (demarka...? Może wsm
 powinnam markę, jako że mam cztery piki?). Bartek zmienił atak na trefla,
 wzięłam na króla i zagrałam w kiera. Rozgrywający
 wziął na \xhearts 8 i na prawdę nie wiem dlaczego wziął tylko swoje...
-
-\hfill -K
-
-[pamiętasz co tam zrobił?]
 
 \pagebreak
 \section*{Rozdanie 5}
@@ -139,7 +129,7 @@ wziął na \xhearts 8 i na prawdę nie wiem dlaczego wziął tylko swoje...
     \end{tabular}
 \end{table}
 
-Z 64 Mimo słabego koloru zdecydowałam się blokować 
+[KG] Z 64 Mimo słabego koloru zdecydowałam się blokować 
 (chociaż chyba nie mam na blok w tych założeniach?).
 Wist w karo (z nadzieją na przebitkę?) wypuścił (+3).
 Za zagraniem asa kier przemawia brak antykontry na 3\hearts,
@@ -151,7 +141,12 @@ z perspektywą 3\nt i szóstym QJT...?
 Natomiast myślę, że z renonsem karo mogłabym dać na koniec pałę wistową,
 licząc, że Bartek ma długość i się domyśli (chyba że pała jest jednoznacznie na trefla?).
 
-\hfill -K
+[BS] Tak, pas na 3\hearts jest oczywisty ale weź tu pasa zauważ xdd\\
+Pała jest wistowa na domyśl się i niekoniecznie 
+musi być poprzedzona antykontrą. 
+Może jeszcze 3 razy i będę widział takie pasy. 
+W karo, bo źle policzyłem atuty i myślałem, że 
+jak wezmę na \xspades K to dostaniesz klepę.
 
 \pagebreak
 \section*{Rozdanie 6}
@@ -170,7 +165,7 @@ licząc, że Bartek ma długość i się domyśli (chyba że pała jest jednozna
     \end{tabular}
 \end{table}
 
-Trochę mi się nudziło i w zielonych z przyzwoitymi punktami 
+[KG] Trochę mi się nudziło i w zielonych z przyzwoitymi punktami 
 weszłam \\
 2\clubs = \major z 44. Ja z ręką \vul{W} dałabym kontrę,
 ale może założenia zachęciły przeciwnika do 3\nt.
@@ -181,8 +176,6 @@ króla kier (ale też mogło wypuścić?). Zostawienie \xspades T skończyłoby 
 bo żeby zerwać przymus musiałabym wyrzucić damę pik zostawiając \xspades A6.
 Z ilościówek powinnam znać cały skład, ale skąd
 mam wiedzieć o \xspades T...?
-
-\hfill -K
 
 \pagebreak
 \section*{Rozdanie 7}
@@ -205,12 +198,14 @@ mam wiedzieć o \xspades T...?
     \end{tabular}
 \end{table}
 
-7\nt bez \xdiams Q ale trzeba było gonić Pawła. Na 6\nt się
+[KG] 7\nt bez \xdiams Q ale trzeba było gonić Pawła. Na 6\nt się
 bierze nadróbkę, a 7 się przegrywa :( bezpiecznie na -1 się nie opłaca
 jak wiadomo że cała sala ugra 6\nt. Grałam kara w strone stołu,
-ale babka na \vul{W} dokładała beznamiętnie.
+ale babka na \vul{W} dokładała beznamiętnie (tak, wiem, że Kacper by trafił).
 
-\hfill -K
+[BS] \vul{E} do pierwszego karo dołożył siódemkę, 
+jakby miał Q7 to by se ją zostawił, 
+żeby umożliwić ci wzięcie piwa.
 
 \pagebreak
 \section*{Rozdanie 8}
@@ -230,7 +225,7 @@ ale babka na \vul{W} dokładała beznamiętnie.
     \end{tabular}
 \end{table}
 
-W sumie jak pas jest forsujący, to ja powinnam wynieść.
+[KG] W sumie jak pas jest forsujący, to ja powinnam wynieść.
 Wist 3\diams, impas kier, +1. Nie znaleźli przebitki.
 
 \pagebreak
@@ -249,7 +244,7 @@ Wist 3\diams, impas kier, +1. Nie znaleźli przebitki.
     \end{tabular}
 \end{table}
 
-Tym razem ja nie inwitowałam z 8... +2, wist \xhearts 7.
+[KG] Tym razem ja nie inwitowałam z 8... +2, wist \xhearts 7.
 
 \pagebreak
 \section*{Rozdanie 12}
@@ -271,7 +266,7 @@ Tym razem ja nie inwitowałam z 8... +2, wist \xhearts 7.
     \end{tabular}
 \end{table}
 
-Pała na 1\nt jest co najmniej dziwna.\\
+[KG] Pała na 1\nt jest co najmniej dziwna.\\
 Został wezwany sędzia na namysł ($^*$), ale moja decyzja
 była od niego niezależna. Bartek wiedział, że nie mam 4 pików,
 a przeciwnicy mają fit i myślał nad wrzuceniem 2\nt. Wist \xclubs A, marka \xclubs 2,
@@ -281,11 +276,15 @@ ale było fajne i zmusiło rozgrywającego do nadbicia
 mojej \xspades 5 królem.\\
 Finalnie -1, 2\nt okazało się być lepsze.
 
-\hfill -K
-
-[nie pamiętam co tam się działo w trakcie,
-jak wyszedłeś w tego trefla to miałam wszystkie piki,
-on jakoś wcześniej kiery przebijał, na co ty wziąłeś?]
+[BS] W rozgrywce nic się nie działo ale miałem straszną padakę 
+i liczyłem wszystko 3 razy. Co do licytacji to widzę, że 
+2\spades jest bez jednej, bardzo rzadko -2. 
+Ale boje się że nie mamy lew na 2\nt. 
+Znam skład wznawiajacego, 
+więc na wznówkę musi mieć co najmniej niezłe kolory. 
+Biorą pewnie 6 lew w kolorach starszych, 
+a my nie mamy źródła lew, bo karo się nie dzieli, 
+a trefli mamy za mało.
 
 \pagebreak
 \section*{Rozdanie 13}
@@ -305,10 +304,7 @@ on jakoś wcześniej kiery przebijał, na co ty wziąłeś?]
     \end{tabular}
 \end{table}
 
-Wist \xclubs, -1.
-
-[Ale czemu? To chodzi, nie
-pamiętam co tam się stało xd]
+[KG] Wist \xclubs, -1.
 
 \pagebreak
 \section*{Rozdanie 14}
@@ -328,7 +324,7 @@ pamiętam co tam się stało xd]
     \end{tabular}
 \end{table}
 
-\xdiams A, \xdiams, \xspades A, dorzucone \xspades 5,
+[KG] \xdiams A, \xdiams, \xspades A, dorzucone \xspades 5,
 i właściwie widać, że jest duże, chyba że Bartek miałby
 \xspades Q5, a rozgrywająca dołożyła \xspades 7
 zamiast \xspades 2 lub 3, żeby mnie zmylić.
@@ -336,8 +332,6 @@ Uznałam odruchowo, że \xspades 5 jest mała, ściągnęłam króla,
 i rozgrywająca oddała jeszcze tylko \xclubs K, -1
 zamiast -2. A 4\diams było swoje (na trafieniu trefla), 
 może mogłam wrzucać...?
-
-\hfill -K
 
 \pagebreak
 \section*{Rozdanie 15}
@@ -356,11 +350,9 @@ może mogłam wrzucać...?
     \end{tabular}
 \end{table}
 
-Zdecydowałam się na wist kierowy, a nie karowy.
-Wzięliśmy 4 kiery i \xclubs K. Po karowym 
+[KG] Zdecydowałam się na wist kierowy, a nie karowy.
+Wzięliśmy 3 kiery, karo i \xclubs K. Po karowym 
 wzięlibyśmy 3 kara, 2 kiery i (prawie na pewno) \xclubs K.
-
-\hfill -K
 
 \pagebreak
 \section*{Rozdanie 16}
@@ -380,13 +372,13 @@ wzięlibyśmy 3 kara, 2 kiery i (prawie na pewno) \xclubs K.
     \end{tabular}
 \end{table}
 
-Jeśli przeciwnicy mają w systemie drury, to wrzucenie
+[KG] Jeśli przeciwnicy mają w systemie drury, to wrzucenie
 końcówki lekko świrowe. Tym razem udało mi się nie 
 wypuścić wistem, chociaż pewnie logiczniej byłoby
 wyciągnąć pika (ale niewiele tu brakuje żeby pik wypuszczał).
 -1.
 
-\hfill -K
+[BS] No ja bym wyjął pika w momencie kiedy \vul{S} wyjął 4\spades z boxa.
 
 \pagebreak
 \section*{Rozdanie 17}
@@ -400,19 +392,25 @@ wyciągnąć pika (ale niewiele tu brakuje żeby pik wypuszczał).
     \centering
     \begin{tabular}{cccc}
         \nvul{W} (K) & \nvul{N} & \nvul{E} (B) & \nvul{S}\\
-        -- & 1\clubs & \pass & 1\hearts \\
+        -- & 1\clubs & \pass & 1\diams \\
+        \pass & 2\clubs & \pass & 2\hearts \\
         \pass & 4\hearts & all pass & \\
     \end{tabular}
 \end{table}
 
-[sprawdź licytację bo nie pamiętam]\\
-Wist \xdiams A, dorzucone 7? Uznałam to za Lavinthala na pika
+[KG] Wist \xdiams A, dorzucone 7? Uznałam to za Lavinthala na pika
 i bojąc się, że Rozgrywający łatwo wyimpasuje moją damę kier
-i zbierze dzielące się trefle, wyszłam \xspades A 
-(do którego dostałam 2?) oszczędzając rozgrywającemu
-konieczności zgadywania pika, swoje.
+i zbierze dzielące się trefle, wyszłam \xspades A,
+oszczędzając rozgrywającemu
+konieczności zgadywania pika, swoje. Do \xspades A dostałam \xspades 2,
+więc tym bardziej liczyłam na króla u partnera.
 
-[co ty tam zrzucałeś...? xd]
+[BS] Do \xdiams A wyrzuciłem środkowe, nw czy mam przesłanki, 
+że akurat zostanie wzięte za wysokie. Chciałem kontynuacji 
+kara, przypominając sobie podobne rozdanie sprzed paru miesięcy, 
+gdzie rozgrywający miał renons trefl. Wtedy trzeba natychmiast 
+skrócić stół i jeśli \nvul{S} musi oddać atuta dostaje drugi skrót i 
+trefle idą spać do łóżeczka. \xspades 2 bo myślałem że masz króla ale idk.
 
 \pagebreak
 \section*{Rozdanie 18}
@@ -426,18 +424,16 @@ konieczności zgadywania pika, swoje.
     \centering
     \begin{tabular}{cccc}
         \nvul{W} (K) & \vul{N} & \nvul{E} (B) & \vul{S}\\
-        -- & -- & 1\clubs & 1\hearts (??) \\
+        -- & -- & 1\clubs & \alrts{2\hearts} \\
         3\clubs & \pass & 3\diams & \pass \\
         3\nt & \pass & 5\clubs & all pass \\
     \end{tabular}
 \end{table}
 
-Powinnam dać 4\clubs zamiast 3\nt, ale na szczęście
+[KG] Powinnam dać 4\clubs zamiast 3\nt, ale na szczęście
 partner uratował kontrakt bojąc się o piki. 5\clubs czapowe.
-A przeciwnik chyba nie zauważył piątego pika i to mogło się dla nas
-źle skończyć, bo po wejściu 1\spades nie wrzucalibyśmy 3\nt.
 
-\hfill -K
+[BS] Typiarz wszedł 2\hearts = kiery i inny, stąd mój pomysł z pikami.
 
 \pagebreak
 \section*{Rozdanie 19}
@@ -457,12 +453,13 @@ A przeciwnik chyba nie zauważył piątego pika i to mogło się dla nas
     \end{tabular}
 \end{table}
 
-No otworzyć to trzeba było. Na 4\clubs też mogłam 4\diams,
+[KG] No otworzyć to trzeba było. Na 4\clubs też mogłam 4\diams,
 niby last train ale jakoś głupio mi było bez cue \diams
 i z \xclubs AK do krótkości. Raczej i tak kończymy w 5\hearts.
 A szlemik bardzo mierny. Wist \xclubs 4, +2.
 
-\hfill -K
+[BS] Zrolowałem se lewę, bo zapomniałem, że istnieje 
+coś takiego jak KJ sec i trzecie karo przebiłem dychą.
 
 \pagebreak
 \section*{Rozdanie 20}
@@ -472,11 +469,9 @@ A szlemik bardzo mierny. Wist \xclubs 4, +2.
 {\vhand{AK52}{KT}{T92}{Q976}}
 {NSEW}
 
-Rozdanie na Pluteckich, dociągnęli do 5\diams bez bilansu,
+[KG] Rozdanie na Pluteckich, dociągnęli do 5\diams bez bilansu,
 idzie. Ale 3\nt lepsze, na podziale kar, a jeszcze wist 
 w pika wypuszcza nadróbkę.
-
-\hfill -K
 
 \pagebreak
 \section*{Rozdanie 21}
@@ -496,13 +491,13 @@ w pika wypuszcza nadróbkę.
     \end{tabular}
 \end{table}
 
-Myślałam nad pałą, mogło iść ale raczej widać, że ciężko.
+[KG] Myślałam nad pałą, mogło iść ale raczej widać, że ciężko.
 Pluteccy pokazali 10-14 po obu stronach.\\
 Wzięliśmy pika, przebitkę, dwa asy i kiera. Wist \xspades K.
 Na asa trefl dostałam wysoką zrzutkę, żeby nie wychodzić w kiera,
-wyszłam i tak, ale to chyba nic nie zmienia.\\
+wyszłam i tak, ale to chyba nic nie zmienia.
 
-[czemu tu idzie 7?]
+[BS] Rozwiązaliśmy mu kiery. Piki nie uciekają, przebitki nie ma.
 
 \pagebreak
 \section*{Rozdanie 22}
@@ -522,13 +517,13 @@ wyszłam i tak, ale to chyba nic nie zmienia.\\
     \end{tabular}
 \end{table}
 
-Z 1\spades się zgadzam, nie mam chyba alternatywy
+[KG] Z 1\spades się zgadzam, nie mam chyba alternatywy
 do tego 3\spades, na 2\spades od razu też nie mam.
 Miałam idealną rękę na jednostronne multi, ale 
 wejście popsuło plany. 3\spades jest -2,
 więc not worth it. Wist \xhearts K.
 
-\hfill -K
+[BS] Nie masz na jednostronne multi. Po co stawiać jak nie trzeba.
 
 \pagebreak
 \section*{Rozdanie 23}
@@ -548,15 +543,13 @@ więc not worth it. Wist \xhearts K.
     \end{tabular}
 \end{table}
 
-Bartek zrespektował mój brak współpracy. Kara nie trafiłam,
+[KG] Bartek zrespektował mój brak współpracy. Kara nie trafiłam,
 -2. Wist \xhearts K. Co ciekawe, prawie cała sala decydowała się na
 (co najmniej) 6\clubs, które nie idzie, ale było
 zdarzało się =. A jedna para nawet odważyła się skontrować 5\spades (XD).
 Na 6\spades z ręką \vul{S} powinno się dać pałę mając jedną lewę (czyli tak jak tu),
 a \vul{N} mając też jedną powinien spasować (\xhearts KQ chyba
 wystarczy).
-
-\hfill -K
 
 \pagebreak
 \section*{Rozdanie 24}
@@ -575,17 +568,12 @@ wystarczy).
     \end{tabular}
 \end{table}
 
-[S wchodził do licytacji 2\clubs? Tak mi się kojarzy]
+[KG] Wist \xclubs A, \clubs.
 
-[TODO dla mnie, przypomnę sobie]
-Wist \xclubs A, \diams. Coś tu zrobiłam mocno nie tak,
-nie pamiętam. Po tym wiście idzie +3 (?), wzięłam +2.
-W ogóle tych kierów nie impasowałam...? A może on wyszedł w drugiej w kiera w ogóle,
-bo to faktycznie postawiłoby mnie w sytuacji, że jak
-przejdę karem 
-nie trafię kiera to będę tylko +1.
-
-\hfill -K
+[BS] W drugiej wyszedł w trefla. 
+Zabiłaś królem, impas karo i 
+typ chyba wywalił waleta (chad) 
+zmuszając cię do wpuszczenia się do ręki, +2.
 
 \pagebreak
 \section*{Rozdanie 25}
@@ -604,9 +592,24 @@ nie trafię kiera to będę tylko +1.
     \end{tabular}
 \end{table}
 
-Wist \xclubs K, +2.
+[BS] Wist \xclubs K, +2.
 
-[Ty rozgrywałeś nwm co się działo]
+Rozdanie z fajnym manewrem i festiwalem wypuszczania.
+Wist \xclubs K po namyśle przebity (?). 
+Natychmiastowe wyjście w karo, nie dałem się 
+porobić i wziąłem na 9. 
+Kier do asa i odblokowanie. 
+Odwrót w karo wziąłem damą. 
+Ściągnąłem 2 kiery.
+
+Teraz uwaga bo się ustawiły Widły Mortona. 
+Gram trefla do waleta. Jeśli \vul{E} zabije asem, 
+daje mi komunikację do ręki 
+żeby wyrzucić pika na trefla lub rozwiązuje mi kolor pikowy. 
+Jeśli przepuści - już nie weźmie, 
+bo wyrzucę trefla na karo.
+\vul{E} zabił i wyszedł w pika, którego ze 
+zdziwieniem wziąłem Królem (?) pokazując karty. +2.
 
 \pagebreak
 \section*{Rozdanie 26}
@@ -625,13 +628,21 @@ Wist \xclubs K, +2.
     \end{tabular}
 \end{table}
 
-Wist \xhearts J. O, burtówka. Jeszcze na naszą korzyść.\\
-Wzięliśmy 6 lew, tyle się należało.
+[KG] Wist \xhearts J. O, burtówka. Jeszcze na naszą korzyść.\\
+Na koniec 2x miałam szansę zabić karo asem (7ma lewa) i 2x puściłam.
 
-[Ale to chyba to co mogliśmy obłożyć bo nie wskoczyłam \xdiams A??
-Jak to się toczyło???]
-
-\hfill -K
+[BS] Wist \xhearts J do K i A (1), 
+kier przepuszczony(2), kier zabity. 
+Trefl do Asa (3). 
+Ściągnąłem 2 kiery (4,5), 
+rozgrywający chyba wyrzucił jakiegoś 
+pika blokując se kolor. 
+\xspades J do K (6). 
+Widać, że rozgrywający ma:\\
+2 pikowe (akurat tu nie miał bo coś spierdolił z komunikacją)\\
+1 kierową\\
+3 treflowe (bo sam je grał, więc ma 4 a może i 5 w ręce, nie ma znaczenia, jak mam dychę to mi spada.)\\
+Puszczenie raz mogło mieć sens bo nie pamiętam co wywalał. 2x na pewno nie.
 
 \pagebreak
 \section*{Rozdanie 27}
@@ -651,18 +662,16 @@ Jak to się toczyło???]
     \end{tabular}
 \end{table}
 
-Zapomniałam system :') 2\clubs powinno być \then\ \diams,
+[KG] Zapomniałam system :') 2\clubs powinno być \then\ \diams,
 albo inwitem z krótkością,
 na szczęście bez większych konsekwencji. Bartek dał 
 bardzo fajne 2\spades = góra z 4 pikami na wypadek inwitu 
 / popraw na karo z karami. A ja się ucieszyłam i spasowałam,
-chociaż właściwie dokład 4\spades mógł wcale nie być świrem?
-
-\hfill -K
-
+chociaż właściwie dokład 4\spades mógł wcale nie być świrem? \\
 Wist \xspades 2.
 
-[w rozgrywce nwm co się działo ale 10 idzie]
+[BS] W rozgrywce przeciwnik po dojściu \xspades A ściągnął \xdiams AK 
+i trzeba było trafić damę trefl co uczyniłem.
 
 \pagebreak
 \section*{Rozdanie 28}
@@ -682,12 +691,10 @@ Wist \xspades 2.
     \end{tabular}
 \end{table}
 
-O dziwo mimo bilansu tylko 3 pary zagrały końcówkę,
+[KG] O dziwo mimo bilansu tylko 3 pary zagrały końcówkę,
 w tym jedna 5\diams. 3\nt z ręki \vul{N} idzie.\\
 Ania miała na 2\nt (na \vul{N}), Michał miał na
 dokład. Ale i tak zagrali 3\diams+1 za 64\%. Wist \xclubs 7.
-
-\hfill -K
 
 \pagebreak
 \section*{Rozdanie 29}
@@ -707,17 +714,13 @@ dokład. Ale i tak zagrali 3\diams+1 za 64\%. Wist \xclubs 7.
     \end{tabular}
 \end{table}
 
-Wydawało mi się, że zamiast 3\diams powinno się dać 3\clubs mimo wszystko.
+[KG] Wydawało mi się, że zamiast 3\diams powinno się dać 3\clubs mimo wszystko.
 Mogę mieć 3-3 w młodych z figurami w treflach i 3\clubs będzie lespsze,
 (a na 2\diams musiałam poprawić). Natomiast z moją ręką
 2\diams nie muszę mówić, nie ma opcji, że na 2\clubs\dbl\ spasują.
 Więc ostatecznie po moim 2\diams na niewymuszonej zgadzam się z 3\diams.
 Ale jak nie dam 2\diams to pewnie zagrają 2\hearts, nie 3. Do wistu \xdiams A
 wyrzuciłam \xdiams T, wyrzucenie damy wypuszcza, bo nie ma komunikacji do przebitki.
-
-\hfill -K
-
-[teraz w kiera wyszedłeś?? czy pik]
 
 Wzięliśmy 2 kara, przebitkę i 2 kiery.
 
@@ -739,18 +742,9 @@ Wzięliśmy 2 kara, przebitkę i 2 kiery.
     \end{tabular}
 \end{table}
 
-[2\clubs jest poprawne?]
-
-Wist 5\clubs. gdzieś po drodze zrzuciłam 
+[KG] Wist 5\clubs. gdzieś po drodze zrzuciłam 
 \xhearts 6 zamiast \xclubs T (na kiera).
 Jakoś nie chciałam tego trefla wyrzucić, kara spod wałka też nie,
 lekko podświadomie uznałam, że środkowy kier jest, z grubsza, na kiera.
-
-\hfill -K
-
-[Ej nie pamiętam co tam się stało, na co myśmy wzięli 2 lewy
-skoro nie wzięliśmy kierowej? Ty jeszcze miałeś pika po wzięciu na pika,
-że moja zrzutka i twoje niewyjście w kiera puściło?]
-
 
 \end{document}
